Configured JS structure and JsHing config

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,8 @@
   <body>
    testing...
     <!-- build:js js/main.min.js -->
+    <script src="js/vendor/vendor.js"></script>
+    <script src="js/modules/test.js"></script>
     <script src="js/main.js"></script>
     <!-- endbuild -->
 
