Support for browserify, fixed a bug with Compass removing gulp-compass and adding gulp-ruby-sass

--- a/app/index.html
+++ b/app/index.html
@@ -28,12 +28,12 @@
 
     
     <!-- Page styles -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
    testing...
     <!-- build:js js/main.min.js -->
-    <script src="js/main.js"></script>
+    <script src="js/bundle.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics -->
